--- a/css/component.css
+++ b/css/component.css
@@ -7,9 +7,9 @@
 	z-index: 10000;
 	height: 230px;
 	overflow: hidden;
-	-webkit-transition: height 0.3s;
-	-moz-transition: height 0.3s;
-	transition: height 0.3s;
+	-webkit-transition: height 0.1s;
+	-moz-transition: height 0.1s;
+	transition: height 0.1s;
 }
 
 .cbp-af-header .cbp-af-inner {
@@ -19,15 +19,13 @@
 	padding: 0 1.875em;
 }
 
-.cbp-af-header h1,
-.cbp-af-header nav {
+.cbp-af-header h1, .cbp-af-header nav {
 	display: inline-block;
 	position: relative;
 }
 
  /* We just have one-lined elements, so we'll center the elements with the line-height set to the height of the header */
-.cbp-af-header h1,
-.cbp-af-header nav a {
+.cbp-af-header h1, .cbp-af-header nav a {
 	line-height: 230px;
 }
 
@@ -56,11 +54,10 @@
 }
 
 /* Transitions and class for reduced height */
-.cbp-af-header h1,
-.cbp-af-header nav a {
-	-webkit-transition: all 0.3s;
-	-moz-transition: all 0.3s;
-	transition: all 0.3s;
+.cbp-af-header h1, .cbp-af-header nav a {
+	-webkit-transition: all 0.1s;
+	-moz-transition: all 0.1s;
+	transition: all 0.1s;
 }
 
 .cbp-af-header.cbp-af-header-shrink {
